--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
+  "manifest_version": 3,
   "name": "Tab Saver",
-  "description" : "",
-  "version": "1.0",
-  "manifest_version": 2,
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
-
-  "permissions": ["tabs", "storage", "unlimitedStorage"],
-  "options_page": "list.html",
-  "browser_action": {
+  "version": "2.0",
+  "content_security_policy": {
+  },
+  "permissions": ["tabs", "storage"],
+  "action": {
     "default_popup": "popup.html",
     "default_icon": "icon.png"
-  }
+  },
+  "options_page": "list.html",
+  "host_permissions": []
 }
